[package]
name = "forest"
version = "0.1.0"
edition = "2021"
authors = ["yotka"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "forest-server"
path = "src/bin/server.rs"

[[bin]]
name = "forest-cli-client"
path = "src/bin/cli_client.rs"

[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
reqwest = {version = "0.11.20", features = ["json", "blocking"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
str = "0.1.4"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = {version = "1.32.0", features = ["full"]}
warp = "0.3.5"
